--- a/index.html
+++ b/index.html
@@ -32,8 +32,11 @@
             alt="50 chip">
         <img id="honderd" src="https://i.pinimg.com/originals/49/5f/8d/495f8d93019a5b4937e2a3524639aa23.png"
             alt="100 chip">
+            <img id="allin" src="https://cdn4.iconfinder.com/data/icons/travel-and-hotel/512/all_incluseve_hotel-512.png" 
+            alt="allin">
+    
     </div>
-    <div id="banksaldo" class="bank"></div>
+     <div id="banksaldo" class="bank"></div>
 </body>
 
 </html>
