--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             alt="50 chip">
         <img id="honderd" src="https://i.pinimg.com/originals/49/5f/8d/495f8d93019a5b4937e2a3524639aa23.png"
             alt="100 chip">
-            <img id="allin" src="https://cdn4.iconfinder.com/data/icons/travel-and-hotel/512/all_incluseve_hotel-512.png" 
+            <img id="allin" src="https://cdn-icons-png.flaticon.com/512/5110/5110770.png" 
             alt="allin">
     
     </div>
